# ClothingClient

./: CMakeLists.txt  README.md
include/: ApiClient.h  AppEventFilter.h  ClothingItemModel.h  MainWindow.h  RoleSelectionDialog.h
src/: ApiClient.cpp  AppEventFilter.cpp  ClothingItemModel.cpp  MainWindow.cpp  RoleSelectionDialog.cpp  main.cpp
styles/: fashion_light.qss
tests/: all_tests.cpp  test_apiclient.cpp  test_clothingitemmodel.cpp  test_mainwindow.cpp  test_roleselectiondialog.cpp
